0.95_02
    Bug Fixes
    * Correct various typos and spelling errors
    * Fix alignment of indented multi-line diagnostics from subtests
    * Fix incorrect operation when subtest called from within a todo block


0.95_01  Wed Mar  3 15:36:59 PST 2010
    Bug Fixes
    * is_deeply() didn't see a difference in regexes [rt.cpan.org 53469]
    * Test::Builder::Tester now sets $tb->todo_output to the output handle and
      not the error handle (to be in accordance with the default behaviour of
      Test::Builder and allow for testing TODO test behaviour).
    * Fixed file/line in failing subtest() diagnostics. (Nick Cleaton)
    * Protect against subtests setting $Level (Nick Cleaton)

    New Features
    * subtests without a 'plan' or 'no_plan' have an implicit 'done_testing()'
      added to them.
    * is_deeply() performance boost for large structures consisting of
      mostly non-refs (Nick Cleaton)


0.94  Wed Sep  2 11:17:47 PDT 2009
    Releasing 0.93_01 as stable.


0.93_01  Mon Jul 20 09:51:08 PDT 2009
    Bug Fixes
    * Make sure that subtest works with Test:: modules which call
      Test::Builder->new at the top of their code. (Ovid)

    Other
    * subtest() returns!


0.92  Fri Jul  3 11:08:56 PDT 2009
    Test Fixes
    * Silence noise on VMS in exit.t (Craig Berry)
    * Skip Builder/fork_with_new_stdout.t on systems without fork (Craig Berry)


0.90  Thu Jul  2 13:18:25 PDT 2009
    Docs
    * Note the IO::Stringy license in our copy of it.
      [test-more.googlecode.com 47]

    Other
    * This is a stable release for 5.10.1.  It does not include
      the subtest() work in 0.89_01.


0.89_01  Tue Jun 23 15:13:16 EDT 2009
    New Features
    * subtest() allows you to run more tests in their own plan.
      (Thanks Ovid!)
    * Test::Builder->is_passing() will let you check if the test is
      currently passing.

    Docs
    * Finally added a note about the "Wide character in print" warning and
      how to work around it.

    Test Fixes