@@ -3,6 +3,7 @@
     * Correct various typos and spelling errors
     * Fix alignment of indented multi-line diagnostics from subtests
     * Fix incorrect operation when subtest called from within a todo block
+    * Avoid spurious output after a fork within a subtest
 
 
 0.95_01  Wed Mar  3 15:36:59 PST 2010
